--- a/index.html
+++ b/index.html
@@ -14,34 +14,46 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper lightgray">
         <div class="top">
-            <h2 class="text-big weight-mid top-content">Reliable, efficient delivery</h2>
-            <h2 class="text-big weight-heavy top-content">Powered by Technology</h2>
-            <p class="text-small weight-light top-content">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+            <h1 class="text-big weight-light darkblue">Reliable, efficient delivery</h1>
+            <h2 class="text-big weight-heavy darkblue">Powered by Technology</h2>
+            <p class="text-small weight-mid grayblue">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
         </div>
 
         <div class="bottom">
-            <div class="col-1">
-                <div class="text-mid weight-heavy">Supervisor</div>
-                <div class="text-small weight-light">Monitors activity to identify project roadblocks</div>
+            <div class="card supervisor">
+                <div class="card-wrapper">
+                    <h5 class="text-mid weight-heavy darkblue">Supervisor</h5>
+                    <p class="text-small weight-mid grayblue">Monitors activity to identify project roadblocks</p>
+                    <div class="card-image"><img src="images/icon-supervisor.svg"></div>
+                </div>
             </div>
-            <div class="col-2">
-                <div class="text-mid weight-heavy">Team Builder</div>
-                <div class="text-small weight-light">Scans our talent network to create the optimal team for your project</div>
+            <div class="card team">
+                <div class="card-wrapper">
+                    <h5 class="text-mid weight-heavy darkblue">Team Builder</h5>
+                    <p class="text-small weight-mid grayblue">Scans our talent network to create the optimal team for your project</p>
+                    <div class="card-image"><img src="images/icon-team-builder.svg"></div>
+                </div>
             </div>
-            <div class="col-2">
-                <div class="text-mid weight-heavy">Karma</div>
-                <div class="text-small weight-light">Regularly evaluates our talent to ensure quality</div>
+            <div class="card karma">
+                <div class="card-wrapper">
+                    <h5 class="text-mid weight-heavy darkblue">Karma</h5>
+                    <p class="text-small weight-mid grayblue">Regularly evaluates our talent to ensure quality</p>
+                    <div class="card-image"><img src="images/icon-karma.svg"></div>
+                </div>
             </div>
-            <div class="col-3">
-                <div class="text-mid weight-heavy">Calculator</div>
-                <div class="text-small weight-light">Uses data from past projects to provide better delivery estimates</div>
+            <div class="card calculator">
+                <div class="card-wrapper">
+                    <h5 class="text-mid weight-heavy darkblue">Calculator</h5>
+                    <p class="text-small weight-mid grayblue">Uses data from past projects to provide better delivery estimates</p>
+                    <div class="card-image"><img src="images/icon-calculator.svg"></div>
+                </div>
             </div>
         </div>
 
         <footer>
-            <p class="attribution">
+            <p class="attribution darkblue">
                 Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Chase Reineke</a>.
             </p>
         </footer>
